# kabosu

./: .dockerignore  .env.example  .gitignore  CLI.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  doghook.toml  kabosu.toml  kabosu.toml.example  manifest.json
components/cli/: Cargo.toml
components/cli/src/: web.rs
components/cli/src/cli/: commands.rs  mod.rs
components/cli/src/web/: handlers.rs  index.html  mod.rs
components/cli/static/: index.html  index.html.bak  wallet.js
components/config/src/: config.rs  toml.rs
components/dogecoin/: Cargo.toml
components/dogecoin/src/: blk_reader.rs  chainparams.rs  lib.rs
components/dogecoin/src/block_pool/tests/: mod.rs
components/dogecoin/src/block_pool/tests/helpers/: bitcoin_shapes.rs  dogecoin_blocks.rs  dogecoin_shapes.rs  mod.rs  transactions.rs
components/dogecoin/src/pipeline/: blk.rs  mod.rs
components/dogecoin/src/pipeline/rpc/: mod.rs  pipeline.rs
components/dogecoin/src/pipeline/zmq/: mod.rs
components/dogecoin/src/types/: cursor.rs  doginals.rs  mod.rs  rosetta.rs
components/dogecoin/src/utils/: dogecoind.rs  mod.rs
components/doginals/: README.md
components/doginals-indexer/: Cargo.toml
components/doginals-indexer/src/: cache.rs  lib.rs  manifest.rs
components/doginals-indexer/src/core/: mod.rs  test_builders.rs
components/doginals-indexer/src/core/meta_protocols/: mod.rs
components/doginals-indexer/src/core/meta_protocols/dmp/: mod.rs
components/doginals-indexer/src/core/meta_protocols/dns/: mod.rs
components/doginals-indexer/src/core/meta_protocols/dogemap/: mod.rs
components/doginals-indexer/src/core/meta_protocols/dogetag/: mod.rs
components/doginals-indexer/src/core/meta_protocols/drc20/: cache.rs  drc20_pg.rs  index.rs  mod.rs  parser.rs  test_utils.rs  verifier.rs
components/doginals-indexer/src/core/meta_protocols/drc20/models/: db_operation.rs
components/doginals-indexer/src/core/meta_protocols/lotto/: mod.rs
components/doginals-indexer/src/core/pipeline/processors/: inscription_indexing.rs
components/doginals-indexer/src/core/protocol/: inscription_parsing.rs  inscription_sequencing.rs  koinu_numbering.rs  koinu_tracking.rs  sequence_cursor.rs
components/doginals-indexer/src/db/: blocks.rs  checkpoint.rs  doginals_pg.rs  mod.rs
components/doginals-indexer/src/db/models/: db_current_location.rs  db_inscription.rs  db_inscription_parent.rs  db_inscription_recursion.rs  db_koinu.rs  db_location.rs  mod.rs
components/doginals-indexer/src/utils/: monitoring.rs  webhooks.rs
components/doginals/src/: artifact.rs  cenotaph.rs  decimal_koinu.rs  degree.rs  dogespell.rs  dune.rs  dune_id.rs  dunestone.rs  edict.rs  envelope.rs  epoch.rs  etching.rs  flaw.rs  height.rs  inscription.rs  inscription_id.rs  koinu.rs  koinu_point.rs  lib.rs  mod.rs  pile.rs  rarity.rs  spaced_dune.rs  varint.rs
components/doginals/src/dunestone/: message.rs  tag.rs
components/dunes/: Cargo.toml
components/dunes/src/: lib.rs
components/dunes/src/db/: index.rs  mod.rs
components/dunes/src/db/cache/: db_cache.rs  dune_validation.rs  index_cache.rs  input_dune_balance.rs  mod.rs  transaction_cache.rs  transaction_location.rs  utils.rs
components/dunes/src/db/models/: db_balance_change.rs  db_dune.rs  db_ledger_entry.rs  db_rune.rs  db_supply_change.rs  mod.rs
components/dunes/src/utils/: monitoring.rs
docker/: entrypoint.sh
docs/: MARKETPLACE_TODO.md  dog-vs-doghook.md  dog-vs-kabosu.md
migrations/doginals/: V19__dns_names.sql  V1__koinu.sql  V20__dogemap_claims.sql  V25__doge_lotto_tip_percent.sql  V29__marketplace.sql  V2__inscriptions.sql  V30__marketplace_auth_bids.sql  V32__dogelotto_luck_marks.sql  V3__locations.sql  V4__current_locations.sql  V5__inscription_transfers.sql
migrations/doginals-drc20/: V2__operations.sql
migrations/dunes/: V1__dunes.sql
