[package]
name = "cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "kabosu"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
config = { path = "../config" }
doginals-indexer = { path = "../doginals-indexer" }
dunes = { path = "../dunes" }
dogecoin = { path = "../dogecoin" }
doginals = { path = "../doginals" }
postgres = { path = "../postgres" }
bitcoin = { workspace = true }
hex = "0.4.3"
num_cpus = "1.16.0"
serde = "1"
serde_json = "1"
serde_derive = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "stream",
    "json",
    "rustls-tls",
] }
hiro-system-kit = { workspace = true }
clap = { version = "3.2.23", features = ["derive"], optional = true }
clap_generate = { version = "3.0.3", optional = true }
toml = { version = "0.5.6", features = ["preserve_order"], optional = true }
tcmalloc2 = { version = "0.1.2", optional = true }
ctrlc = { version = "3.4", features = ["termination"] }
axum = "0.7.5"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
askama = "0.12"
chrono = "0.4"
deadpool-postgres = { workspace = true }
rand = "0.8"

[features]
default = ["cli"]
cli = ["clap", "clap_generate", "toml", "hiro-system-kit/log"]
debug = ["hiro-system-kit/debug"]
release = ["hiro-system-kit/release"]
tcmalloc = ["tcmalloc2"]

