[package]
name = "dogecoin"
version.workspace = true
description = "Stateless Transaction Indexing Engine for Dogecoin"
license = "GPL-3.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
serde = { version = "1", features = ["rc"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
serde-hex = "0.1.0"
serde_derive = "1"
hiro-system-kit = { workspace = true }
rocket = { version = "=0.5.0", features = ["json"] }
bitcoin = { workspace = true }
bitcoincore-rpc = "0.18.0"
bitcoincore-rpc-json = "0.18.0"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
tokio = { workspace = true }
base58 = "0.2.0"
crossbeam-channel = "0.5.15"
hex = "0.4.3"
zmq = { version = "0.10.0", optional = true }
lazy_static = "1.4.0"
schemars = { version = "0.8.16", git = "https://github.com/hirosystems/schemars.git", branch = "feat-chainhook-fixes" }
strum = { version = "0.23.0", features = ["derive"] }
dhat = { version = "0.3.3", optional = true }
rusty-leveldb = "2"
byteorder = "1"

[dev-dependencies]
assert-json-diff = "2.0.2"
test-case = "3.1.0"

[features]
default = ["hiro-system-kit/log"]
zeromq = ["zmq"]
debug = ["hiro-system-kit/debug"]
release = ["hiro-system-kit/release_debug", "hiro-system-kit/full_log_level_prefix"]
dhat-heap = ["dhat"]
