[package]
name = "doginals-indexer"
version.workspace = true
edition = "2021"

[dependencies]
num_cpus = "1.16.0"
anyhow = { version = "1.0.56", features = ["backtrace"] }
ciborium = "0.2.2"
serde = "1"
serde_json = "1"
serde_derive = "1"
hex = "0.4.3"
sha2 = "0.10"
rand = "0.9.0"
lru = "0.13.0"
config = { path = "../config" }
bitcoin = { workspace = true }
dogecoin = { path = "../dogecoin" }
hiro-system-kit = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = [
    "stream",
    "json",
    "rustls-tls",
] }
tokio = { workspace = true }
futures-util = "0.3.24"
flate2 = "1.0.24"
tar = "0.4.38"
flume = "0.11.0"
ansi_term = "0.12.1"
atty = "0.2.14"
crossbeam-channel = "0.5.15"
threadpool = "1.8.1"
dashmap = "5.4.0"
fxhash = "0.2.1"
progressing = "3"
futures = "0.3.28"
rocksdb = { version = "0.23.0", default-features = false, features = [
    "snappy", "bindgen-runtime"
] }
pprof = { version = "0.14.0", features = ["flamegraph"], optional = true }
hyper = { version = "=0.14.27" }
lazy_static = { version = "1.4.0" }
regex = "1.10.3"
prometheus = { workspace = true }
postgres = { path = "../postgres" }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
refinery = { workspace = true }
maplit = "1.0.2"
doginals = { path = "../doginals" }

[dev-dependencies]
test-case = "3.1.0"

[features]
debug = ["hiro-system-kit/debug", "pprof"]
release = ["hiro-system-kit/release"]
