[package]
name = "dunes"
version.workspace = true
edition = "2021"

[dependencies]
dogecoin = { path = "../dogecoin" }
bitcoin = { workspace = true }
lru = "0.12.3"
# Dogecoin's doginals parser — use the doginals crate from our workspace
doginals-parser = { package = "doginals", path = "../doginals" }
bytes = "1.3"
config = { path = "../config" }
serde = "1"
serde_derive = "1"
hex = "0.4.3"
rand = "0.8.5"
hiro-system-kit = { workspace = true }
crossbeam-channel = "0.5.15"
clap = { version = "4.3.2", features = ["derive"] }
postgres = { path = "../postgres" }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
refinery = { workspace = true }
num-traits = "0.2.14"
maplit = "1.0.2"
prometheus = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
dhat = { version = "0.3.3", optional = true }

[dev-dependencies]
test-case = "3.1.0"

[features]
debug = ["hiro-system-kit/debug"]
release = ["hiro-system-kit/release"]
dhat-heap = ["dhat"]
